--- a/sample/sample.html
+++ b/sample/sample.html
@@ -9,7 +9,15 @@
             <area shape="rect" target="_blank" coords="120,120,240,240" alt="2" href="#">
             <area shape="rect" target="_blank" coords="240,240,360,360" alt="3" href="#">
             <area shape="rect" target="_blank" coords="360,360,480,480" alt="4" href="#">
-            <area shape="rect" target="_blank" coords="1400,400,1600,620" alt="4" href="#">
+            <area shape="rect" target="_blank" coords="1400,400,1600,620" alt="5" href="#">
+            <area shape="circle" target="_blank" coords="1200,300,100" alt="6" href="wwww.naver.com">
+            <area shape="poly" target="_blank" coords="130,6,253,96,223,106,130,39" alt="7" href="www.daum.net">
          </map>
+         <svg version="1.1" width="1600" height="620" style="position: absolute;left: 8px;top: 8px;" xmlns="http://www.w3.org/2000/svg">
+            <rect x="0" y="0" width="120" height="120" opacity="0.3" fill="red"></rect>
+            <rect x="120" y="120" width="120" height="120" opacity="0.3" fill="blue"></rect>
+            <circle cx="1200" cy="300" r="100" opacity="0.3" fill="orange"></circle>
+            <polygon points="130,6 253,96 223,106 130,39" fill="pink" stroke="white"></polygon>
+         </svg>
     </body>
 </html>
